--- a/style.scss
+++ b/style.scss
@@ -31,18 +31,11 @@ body {
 }
 
 .box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   box-shadow: $material-shadow;
-  min-height: 150px;
+  padding: 10px;
   border-radius: 5px;
   background-color: white;
   margin-bottom: 10px;
-  &__subtitle { 
-    color: lighten(grey, 15%); 
-  }
   &__empty {
     background-color: transparent; box-shadow: none 
   }
@@ -51,4 +44,12 @@ body {
 
 .el-select {
   width: 100%;
+}
+
+.thumpnail {
+  max-width:100%;
+  max-height:100%;
+}
+.box-item {
+  padding-right: 10px;
 }
