--- a/public/style.css
+++ b/public/style.css
@@ -53,3 +53,15 @@ body {
 .box-item {
   padding-right: 10px;
 }
+.el-checkbox.is-bordered {
+	padding: 9px 20px 9px 10px;
+	border-radius: 4px;
+	border: 1px solid #dcdfe6;
+	box-sizing: border-box;
+	line-height: normal;
+  height: 40px;
+  background: white;
+}
+.el-checkbox.is-bordered.is-checked {
+	border-color: #409eff;
+}
